List for Goals added, but not showing in fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <string-array name="goalsType_array">
+        <item>Short</item>
+        <item>Middle</item>
+        <item>Long</item>
+    </string-array>
+
 </resources>
