mood logic added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,13 @@
         <item>Romance</item>
         <item>Family</item>
     </string-array>
+    <string-array name="mood_array">
+        <item>Undefined</item>
+        <item>Loser</item>
+        <item>Depressed</item>
+        <item>Mediocre</item>
+        <item>Dude</item>
+        <item>Superstar</item>
+    </string-array>
 
 </resources>
