--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,26 +6,49 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="other">Sonstiges</string>
+    <string name="mood_manager">Mood Manager</string>
+    <string name="goals_manager">Goals Manager</string>
+    <string name="add_goals">Add Goals</string>
+    <string name="current_mood">Aktueller Punktestand:</string>
+    <string name="current_status">Dein Status:</string>
+    <string name="short_goals">Kurze Ziele</string>
+    <string name="medium_goals">Mittlere Ziele</string>
+    <string name="long_goals">Lange Ziele</string>
+    <string name="add_new_goal">Neues Ziel</string>
+    <string name="name">Name</string>
+    <string name="valid_until">Gültig bis</string>
+    <string name="goal_name">Zielbezeichnung</string>
+    <string name="goal_type">Ziellänge</string>
+    <string name="goal_class">Zielart</string>
+    <string name="save_goal">Ziel speichern</string>
+    <string name="too_many_goals">Zu viele Ziele gespeichert. Lösche eines!</string>
+    <string name="delete_message">Das folgende Ziel wird gelöscht:</string>
+    <string name="confirm_message">Das folgende Ziel wird bestätigt:</string>
+    <string name="yes">Ja</string>
+    <string name="no">Nein</string>
+    <string name="confirm">Nein</string>
+    <string name="delete">Nein</string>
 
     <string-array name="goalsType_array">
-        <item>Short</item>
-        <item>Middle</item>
-        <item>Long</item>
+        <item>Kurz</item>
+        <item>Mittel</item>
+        <item>Lang</item>
     </string-array>
     <string-array name="goalsClass_array">
-        <item>Fortune</item>
-        <item>Knowledge</item>
-        <item>Reputation</item>
-        <item>Romance</item>
-        <item>Family</item>
+        <item>Vermögen</item>
+        <item>Wissen</item>
+        <item>Soziales</item>
+        <item>Romantisch</item>
+        <item>Familie</item>
     </string-array>
     <string-array name="mood_array">
-        <item>Undefined</item>
+        <item>Undefiniert</item>
         <item>Loser</item>
-        <item>Depressed</item>
-        <item>Mediocre</item>
-        <item>Dude</item>
-        <item>Superstar</item>
+        <item>Niedergeschlagen</item>
+        <item>Mittelmäßig</item>
+        <item>Gut</item>
+        <item>Wunderbar</item>
     </string-array>
 
 </resources>
